tests/positive/test-success-struct1.rooc
struct Test {
    field1:int,
    field2:float,
}

fun main() -> int {
    var test1:Test = Test {field1 : 1, field2 : 1.0,};
    var test2:Test = Test {field2 : 1.0, field1 : 1,};
    var test3:Test = Test {field2 : 1.0, field1 : 1};
    
    print_int(test1.field1);

    return 0;
}