tests/negative/test-fail-struct2.rooc
fun main() -> int {
    var test:Test = Test {field1 : 1, field2 : 1.0,};
    return 0;
}